RPN-945 Activity support for Eth
